--- a/development/changes
+++ b/development/changes
@@ -4,6 +4,7 @@ Added:
 	Load project from CLI ($ clide -p <project>)
 	Langauges pull compiler/interpreter from clide.conf
 	adding packages with source code (Lang.Java)
+	Use custom project templates
 
 Concept:
 	Managing different project types
@@ -12,4 +13,4 @@ Bug Fixes:
 	"install" on projects and non-projects (issue: projects would not be installed in .bash_aliases)
 	"AddAlias.sh" was not finding "errorCode.sh"
 	performance improvements (CLI User Interface only changes after TRUE changes)
-
+	code refactering
