refactoring repo support; bug fixes

--- a/development/changes
+++ b/development/changes
@@ -7,6 +7,7 @@ Added:
 	Use custom project templates
 	Provided better support for Java Projects (Lang.Java)
 	project mode addition is in progress (ie main vs test)
+	Refactoring repo support (repo.sh)
 
 Concept:
 	Managing different project types
@@ -18,3 +19,5 @@ Bug Fixes:
 	code refactering
 	moved Compile error message to "errorCode.sh"
 	removed .h support from Go support (Lang.Go)
+	fixed argument handling of pre-compiling code
+	fixing repo arguments
