--- a/development/changes
+++ b/development/changes
@@ -12,6 +12,7 @@ Added:
 	Java project run and compile (.class and .jar) much like standard programs (Lang.Java)
 	Java projects are made to compile with the name of the project (Lang.Java)
 	Change the CLI logo for cl[ide] using the config file (var/clide.conf)
+	Added C++ X11 support (Lang.C++)
 
 Concept:
 	Managing different project types
