"Improving repo.sh support"

--- a/development/changes
+++ b/development/changes
@@ -33,3 +33,4 @@ Bug Fixes:
 	refactored code in Java language support (Lang.Java)
 	refactored code in ALL language support files (Lang.*)
 	prevents code from aliased code from being selected; otherwise breaks the code
+	improved repo.sh support
